Make tages valid

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card">
       <picture>
         <source media="(min-width: 1440px)" srcset="images/image-product-desktop.jpg">
-        <img src="images/image-product-desktop.jpg" alt="product-image" srcset="images/image-product-mobile.jpg">
+        <img src="images/image-product-mobile.jpg" alt="flaconi bottle">
       </picture>
       <div class="card-body">
         <span class="card-overline">PERFUME</span>
@@ -34,5 +34,4 @@
     </div>
   </main>
 </body>
-
 </html>
